# cmake-xcode-unity-build-problem

./: CMakeLists.txt  CMakePresets.json  README.md  lib_wrapper.cpp  lib_wrapper.h  main.cpp
mylib/: CMakeLists.txt  mylib.cpp
